# cpp_study

./: .clang-format  .clangd  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.en.md  README.md  conanfile.txt  cpp_shell.sh.cpp  formate_all.sh  install_conan_package_from_khalid.sh  linux_build_docker_startup.txt
_template/: CMakeLists.txt  main.cpp
aoi_study/cloudwu_aoi/: CMakeLists.txt
aoi_study/simple_quda_tree/: CMakeLists.txt  QuadTree.cpp  QuadTree.h  QuadTree.tpp  Vertex.h
aoi_study/simple_quda_tree/main/: main.cpp  tests.cpp
cmake_install_template/: CMakeLists.txt  README.md  main.cpp
cmake_install_template/cmake/: math_vecConfig.cmake.in
cmake_install_template/math_vec/: math_vec.cpp  math_vec.h
common/temlpate/template_main/: CMakeLists.txt  main.cpp
cpp_study/old_uinx_study/: CMakeLists.txt  boost_log_init.cpp  boost_log_init.h  common_funcs.h  init_func.h  log_init_new.cpp  log_init_new.h  log_macro.h  main.cpp
cpp_study/old_uinx_study/c_traps/: main.cpp
cpp_study/old_uinx_study/gtest/: main.cpp
cpp_study/old_uinx_study/properties/: log4cplus_root.properties
cpp_study/old_uinx_study/study_src/boost_filesystem_test/: main.cpp
cpp_study/old_uinx_study/study_src/boost_log_new/: main.cpp
cpp_study/old_uinx_study/study_src/boost_log_study/: boost_lib_main.h  boost_lib_test.cpp
cpp_study/old_uinx_study/study_src/cpp_grammer/: ArrSize.h  ptr_test.h  ref_move_test.hpp  temp.cpp  templatestudy.h
cpp_study/old_uinx_study/study_src/dynamtic_lib/: libmfunc.so.0.1  test
cpp_study/old_uinx_study/study_src/expert_c_programmer/: TimeQuestion.h
cpp_study/old_uinx_study/study_src/file_dir/: stat_study.h
cpp_study/old_uinx_study/study_src/fileio/: file_io.h  fileio_main.h  io_cpp_test.h
cpp_study/old_uinx_study/study_src/libgo_study/: basic_lib_go.hpp  lib_go_main.hpp  test1.h  test_cmake.cpp  test_cmake.h
cpp_study/old_uinx_study/study_src/public_object/: init_test.hpp  mem_test.hpp  people.hpp
cpp_study/old_uinx_study/study_src/socket_study/: socket_main.h  socket_server.hpp
cpp_study/old_uinx_study/study_src/sql_study/: redis_conn.hpp
cpp_study/old_uinx_study/study_src/stl/: arr_test.hpp  stl_main.h
cpp_study/old_uinx_study/study_src/thread_study/: atomic_test.hpp  promise_study.hpp  thread_study_main.hpp
cpp_study/old_uinx_study/temple_main/: main.cpp
cpp_study/old_uinx_study/temple_main/boost_log_main/: CMakeLists.txt  main.cpp
cpp_study/old_uinx_study/unix_web_program_study/: io_mutiplexing_impl.cpp  io_mutiplexing_test.h  m_poll_svr.cpp  m_poll_svr.h  select_cli.cpp  select_svr.cpp  server_cli_std.cpp  socket_svr_std.cpp  unix_main.cpp
cpp_study/old_uinx_study/unix_web_program_study/epoll_test/: epoll_simple_test.hpp  epoll_svr.cpp  epoll_svr.h  main.cpp
cpp_study/old_uinx_study/unix_web_program_study/get_addr_info_study/: main.cpp  read_page.cpp  read_page.h
cpp_study/old_uinx_study/unix_web_program_study/ip6_svr_ip4_ip6_cli/: cli.cpp  cli.h  main.cpp  svr.cpp
cpp_study/old_uinx_study/unix_web_program_study/nup_14/: main.cpp  timeout_socket_operator.h
cpp_study/old_uinx_study/unix_web_program_study/sctp_study/: main.cpp
cpp_study/old_uinx_study/unix_web_program_study/udp_study/: main.cpp  udp_svr.cpp  udp_svr.h
cpp_study/old_uinx_study/unix_web_program_study/unix_local/: main.cpp
old_uinx_study/gtest/: CMakeLists.txt  main.cpp  simple_test.cpp  simple_test.h
old_uinx_study/study_src/boost_filesystem_test/: CMakeLists.txt  main.cpp
old_uinx_study/study_src/boost_log_new/: CMakeLists.txt  main.cpp
old_uinx_study/temple_main/: CMakeLists.txt  main.cpp
old_uinx_study/temple_main/boost_log_main/: CMakeLists.txt
old_uinx_study/unix_web_program_study/get_addr_info_study/: CMakeLists.txt  read_page.cpp
old_uinx_study/unix_web_program_study/ip6_svr_ip4_ip6_cli/: CMakeLists.txt  cli.cpp  cli.h  main.cpp  svr.cpp  svr.h
old_uinx_study/unix_web_program_study/sctp_study/: CMakeLists.txt  main.cpp
src/template_main_with_lib/: CMakeLists.txt  test_func.cpp
src/template_main_with_lib/main/: main.cpp
src_boost_study/serialization/: CMakeLists.txt  main.cpp
src_cpp_language/construction_destruct_throw/: CMakeLists.txt  main.cpp  main.s  src_cpp_language_construction_destruct_throw.S
src_cpp_language/hook_sys_call/: CMakeLists.txt  README.md  get_stack_str.h  hook_malloc.cpp  hook_static.cpp  libcpp.txt  main.cpp
src_cpp_language/static_lib_func/: CMakeLists.txt  test_func.cpp
src_cpp_language/static_lib_func/main/: main.cpp
src_cxx_newest/utf-8_split/: CMakeLists.txt  main.cpp
src_cxx_newest_23/import_std/: .gitignore  .gitigore  CMakeLists.txt  build.sh  main  main.cpp
src_cxx_newest_23/import_std/stdexec/: CMakeLists.txt
src_lib_clang_study/cpp_header_tools/: .gitignore  README.md  pyproject.toml  test_main.py
src_lib_clang_study/cpp_header_tools/cpp_header_tools/: class_analyze.py  compile_db_builder.py  cpp_generator.py  cpp_header_tools.py  generate_dirver.py  generate_session.py  generator_builder.py  generator_mng.py  header_analyze.py  row_args_builder.py  templates_mng.py
src_lib_clang_study/cpp_header_tools/cpp_header_tools/template/: templates_mng.py
src_lib_tests/entt_test/: CMakeLists.txt  main.cpp
src_lib_tests/protobuf_diff/: CMakeLists.txt  main.cpp  test_data.pb.cc  test_data.pb.h  test_data.proto
src_lib_tests/proxy_test/: CMakeLists.txt  main.cpp
src_lib_tests/pybind11_c_call_py/: CMakeLists.txt  call_py.cpp
src_lib_tests/pybind11_c_call_py/py_module/: __init__.py  py_funcs.py
src_lib_tests/pybind11_test/: .gitignore  CMakeLists.txt  call_cpp_lib.py  test_func.cpp
src_lib_tests/pybind11_test/c_lib_4_py/: class_export.cpp  classes.cpp  classes.h  export.cpp  funcs.cpp  funcs.h  test_func.cpp
src_lib_tests/simd_test/: CMakeLists.txt  compiler_simd_test.cpp  get_simd_support.c  get_simd_support.h  main.cpp
src_linux_tests/io_uring_test/: CMakeLists.txt  main.cpp
stl_old/changeable_var/: CMakeLists.txt
templates/template_main_with_lib/: CMakeLists.txt  test_func.cpp  test_func.h
templates/template_main_with_lib/main/: main.cpp
(+1017 files in other folders)
