[tool.poetry]
name = "cpp-header-tools"
version = "0.1.0"
description = "An independent cpp header tool like unreal"
authors = ["puzzzzzzle <2359173906@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
libclang = "^16.0.6"
jinja2 = "^3.1.2"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

